--- a/AvaliadorGastronomico Professor/AvaliadorGastronomico.WebUI/Views/Critica/Criar.cshtml
+++ b/AvaliadorGastronomico Professor/AvaliadorGastronomico.WebUI/Views/Critica/Criar.cshtml
@@ -1,5 +1,5 @@
 ﻿@model AvaliadorGastronomico.Domain.Critica
-
+@* slide 34 *@
 @{
     ViewBag.Title = "Criar";
 }
@@ -7,8 +7,11 @@
 <h2>Criar</h2>
 @section scripts
 {
-    @Scripts.Render("~/bundles/jqueryval")
+    <script src="~/Scripts/jquery.validate.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
 }
+
+
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(true)
     @* Slide 58 *@
