--- a/AvaliadorGastronomico Professor/AvaliadorGastronomico.WebUI/Views/Critica/Editar.cshtml
+++ b/AvaliadorGastronomico Professor/AvaliadorGastronomico.WebUI/Views/Critica/Editar.cshtml
@@ -7,7 +7,8 @@
 
 @section scripts
 {
-    @Scripts.Render("~/bundles/jqueryval")
+    <script src="~/Scripts/jquery.validate.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
 }
 
 <h2>Editar</h2>
