--- a/AvaliadorGastronomico Professor/AvaliadorGastronomico.WebUI/Views/Critica/Index.Slide22.cshtml
+++ b/AvaliadorGastronomico Professor/AvaliadorGastronomico.WebUI/Views/Critica/Index.Slide22.cshtml
@@ -14,7 +14,7 @@
     @: Texto explicito this void main *@
     
     <div class="review">
-        <h4>@item.Restaurante.Nome</h4> *@
+        <h4>@item.Restaurante.Nome</h4> 
         <h5>Nota: @item.Nota</h5>
         <p>
             @item.Corpo
