--- a/AvaliadorGastronomico Professor/AvaliadorGastronomico.WebUI/Views/Critica/Index.Slide27.cshtml
+++ b/AvaliadorGastronomico Professor/AvaliadorGastronomico.WebUI/Views/Critica/Index.Slide27.cshtml
@@ -8,8 +8,8 @@
 {
     <div class="review">
          <h4>@item.Restaurante.Nome</h4> *@
-         <img src="@item.Restaurante.CaminhoImagem" alt="@item.Restaurante.Nome" /> @*não funciona pois o valor do caminho imagem está encoded *@
-         @Html.Image(item.Restaurante.CaminhoImagem, item.Restaurante.Nome)
+         <img src="@Server.MapPath(item.Restaurante.CaminhoImagem)" alt="@item.Restaurante.Nome" /> 
+         @Html.Image(Server.MapPath(item.Restaurante.CaminhoImagem), item.Restaurante.Nome)
         <h5>Nota: @item.Nota</h5>
         <p>
             @item.Corpo
