--- a/AvaliadorGastronomico Professor/AvaliadorGastronomico.WebUI/Views/Shared/_Layout.cshtml
+++ b/AvaliadorGastronomico Professor/AvaliadorGastronomico.WebUI/Views/Shared/_Layout.cshtml
@@ -40,6 +40,7 @@
 
         <div id="main">
             @RenderBody()
+            <!-- slide 29 -->
             <div id="footer">
                 @RenderSection("footer", false)
             </div>
