--- a/AvaliadorGastronomico Aluno/AvaliadorGastronomico.WebUI/Views/Shared/_Layout.cshtml
+++ b/AvaliadorGastronomico Aluno/AvaliadorGastronomico.WebUI/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
             </div>
         </div>
     </div>
-     @Scripts.Render("~/bundles/jquery")
+    @RazorHelpers.Script("jquery-1.8.2.js", Url)
   
     @* Slide 45 *@
     @RazorHelpers.Script("jquery-ui-1.8.24.min.js", Url)
