--- a/AvaliadorGastronomico Professor/AvaliadorGastronomico.WebUI/Views/Shared/_Layout.Slide67.cshtml
+++ b/AvaliadorGastronomico Professor/AvaliadorGastronomico.WebUI/Views/Shared/_Layout.Slide67.cshtml
@@ -16,6 +16,7 @@
                 <img src="@Url.Content("~/Content/images/logo.jpg")" alt="Avaliador Gastronômico" />
             </div>
             <div id="logindisplay">
+                <!-- slide 51 -->
                 @Html.Partial("_LoginPartial")
             </div>
             <div id="menucontainer">
