--- a/AvaliadorGastronomico Professor/AvaliadorGastronomico.WebUI/Views/Restaurante/Index.Slide34.cshtml
+++ b/AvaliadorGastronomico Professor/AvaliadorGastronomico.WebUI/Views/Restaurante/Index.Slide34.cshtml
@@ -7,7 +7,7 @@
 
 
 <h2>Lista de Restaurantes</h2>
-@using(Html.BeginForm("Index", "Restaurant", FormMethod.Get))
+@using(Html.BeginForm("Index", "Restaurante", FormMethod.Get))
 {
     @Html.DropDownList("uf", new SelectList(ViewBag.Ufs))
     <input type="submit" value="Filter" />
