--- a/AvaliadorGastronomico Professor/AvaliadorGastronomico.WebUI/Views/Info/Index.cshtml
+++ b/AvaliadorGastronomico Professor/AvaliadorGastronomico.WebUI/Views/Info/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model AvaliadorGastronomico.WebUI.Models.InfoViewModel
+﻿@* slide 77 *@
+@model AvaliadorGastronomico.WebUI.Models.InfoViewModel
 @{
     ViewBag.Title = "Index";
 }
